# grano

./: .gitignore  .graphifyignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CMakeLists.txt  DESIGN_SPEC.md  README.md  RELEASE_NOTES.md  SETUP_GUIDE.md  TESTING.md  grano_mockup_screen.html
.github/workflows/: ci.yml
.paul/: HANDOFF-2026-06-07.md  HANDOFF-2026-06-08.md  PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md  config.md  paul.json
.paul/handoffs/archive/: HANDOFF-2026-06-02.md  HANDOFF-2026-06-03.md
.paul/phases/00-foundation/: 00-01-PLAN.md  00-01-SUMMARY.md
.paul/phases/01-granular-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.paul/phases/02-sample-io/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.paul/phases/03-core-controls/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.paul/phases/04-processing-modules/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md
.paul/phases/05-modulation-matrix/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md
.paul/phases/06-ui-polish-and-advanced/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md
.paul/phases/07-release/: 07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md
.paul/phases/08-qa/: 08-01-PLAN.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-05-PLAN.md  08-05-SUMMARY.md  08-06-PLAN.md  08-06-SUMMARY.md
Resources/Presets/: Broken.gpreset  Cloud.gpreset  Drone.gpreset  Rhythmic.gpreset  Spectral.gpreset
Scripts/: windows-test.bat  windows-test.ps1
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Engine/: EnvelopeShapes.cpp  EnvelopeShapes.h  FeedbackPath.cpp  FeedbackPath.h  Grain.h  GrainPool.cpp  GrainPool.h  GranularEngine.cpp  GranularEngine.h  MultiSampleBank.cpp  MultiSampleBank.h  SampleBuffer.cpp  SampleBuffer.h  SpectralProcessor.cpp  SpectralProcessor.h  StochasticTiming.cpp  StochasticTiming.h  SubGrain.cpp  SubGrain.h
Source/Modulation/: Lfo.cpp  Lfo.h  ModMatrix.cpp  ModMatrix.h  Snapshots.cpp  Snapshots.h
Source/Modules/: Color.cpp  Color.h  Motion.cpp  Motion.h  Pattern.cpp  Pattern.h
Source/UI/: CurveEditor.cpp  CurveEditor.h  Knob.cpp  Knob.h  LfoPanel.cpp  LfoPanel.h  ModulationMatrixView.cpp  ModulationMatrixView.h  ModuleTabPanel.cpp  ModuleTabPanel.h  Slider.cpp  Slider.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/UI/LookAndFeel/: GranoLAF.cpp  GranoLAF.h
Tests/: CMakeLists.txt  test_audio_smoke.cpp  test_color.cpp  test_engine.cpp  test_feedback.cpp  test_main.cpp  test_modulation.cpp  test_motion.cpp  test_multisample.cpp  test_parameters.cpp  test_pattern.cpp  test_sample_io.cpp  test_spectral.cpp  test_stochastic.cpp  test_subgrain.cpp  tsan_suppressions.txt
